# binaryTables

./: .gitignore  CMakeLists.txt
RPackage/: DESCRIPTION  NAMESPACE
RPackage/R/: calculateConditionalPoissonDensity.R  classes.R  conditionalPoisson.R  conditionalPoissonBootstrap.R  conditionalPoissonBootstrapMerging.R  crudeMC.R  exhaustiveSearch.R  onLoad.R  setDefaultPrec.R  withoutReplacement.R  withoutReplacementMerging.R  withoutReplacementMergingWithVariance.R  withoutReplacementSingleStep.R
RPackage/src/: CMakeLists.txt
RPackage/src/binaryTables/: CMakeLists.txt  calculateConditionalPoissonDensity.cpp  calculateConditionalPoissonDensity.h  conditionalPoissonBinaryTables.cpp  conditionalPoissonBinaryTables.h  conditionalPoissonBootstrapBinaryTables.cpp  conditionalPoissonBootstrapBinaryTables.h  conditionalPoissonBootstrapMergingBinaryTables.cpp  conditionalPoissonBootstrapMergingBinaryTables.h  crudeMC.cpp  crudeMC.h  exhaustiveSearch.cpp  exhaustiveSearch.h  register.cpp  setDefaultPrec.cpp  setDefaultPrec.h  withoutReplacement.cpp  withoutReplacement.h  withoutReplacementMerging.cpp  withoutReplacementMerging.h  withoutReplacementMergingWithVariance.cpp  withoutReplacementMergingWithVariance.h  withoutReplacementSingleStep.cpp  withoutReplacementSingleStep.h
Simulation/: .gitignore  generateScenarios.R  jobScript.R  produceTables.R  submitJobsSlurm.R  submitJobsTorque.R  submitScriptSlurm.sh  submitScriptTorque.sh  summarise.R
binaryTablesCommon/: CMakeLists.txt  GayleRyserTest.cpp  GayleRyserTest.h  conditionalPoissonBootstrapImpl.cpp  conditionalPoissonBootstrapImpl.h  conditionalPoissonBootstrapMergingImpl.cpp  conditionalPoissonBootstrapMergingImpl.h  conditionalPoissonImpl.cpp  conditionalPoissonImpl.h  crudeMC.cpp  crudeMC.h  crudeMCImpl.cpp  crudeMCImpl.h  exhaustiveSearchImpl.cpp  exhaustiveSearchImpl.h  includeMPFRBinaryTables.h  problem.cpp  problem.h  withoutReplacementImpl.cpp  withoutReplacementImpl.h  withoutReplacementMergingImpl.cpp  withoutReplacementMergingImpl.h  withoutReplacementMergingWithVarianceImpl.cpp  withoutReplacementMergingWithVarianceImpl.h  withoutReplacementSingleStepImpl.cpp  withoutReplacementSingleStepImpl.h
binaryTablesCommon/conditionalPoisson/: calculateExpNormalisingConstants.cpp  calculateExpNormalisingConstants.h  computeExponentialParameters.cpp  computeExponentialParameters.h  conditionalPoissonSequential.cpp  conditionalPoissonSequential.h
copyText/: CMakeLists.txt
