cmake_minimum_required(VERSION 3.1)
set(HeaderFiles setDefaultPrec.h crudeMC.h exhaustiveSearch.h)
set(CppFiles setDefaultPrec.cpp crudeMC.cpp register.cpp exhaustiveSearch.cpp)
add_library(binaryTablesRPackage SHARED ${CppFiles} ${HeaderFiles})
target_link_libraries(binaryTablesRPackage PUBLIC binaryTablesCommon Rcpp)
set_target_properties(binaryTablesRPackage PROPERTIES OUTPUT_NAME "binaryTables")
target_compile_definitions(binaryTablesRPackage PRIVATE CUSTOM_STATIC_RCPP)

if(WIN32)
	target_compile_definitions(binaryTablesRPackage PUBLIC _CRT_SECURE_NO_WARNINGS)
	target_link_libraries(binaryTablesRPackage PRIVATE "${CMAKE_BINARY_DIR}/RPackage/R.lib")
	foreach(BUILD_TYPE IN LISTS CMAKE_CONFIGURATION_TYPES)
		string(TOUPPER "${BUILD_TYPE}" UPPER_BUILD_TYPE)
		if(CMAKE_SIZEOF_VOID_P EQUAL 8)
			set_target_properties(binaryTablesRPackage PROPERTIES RUNTIME_OUTPUT_DIRECTORY_${UPPER_BUILD_TYPE} ${CMAKE_BINARY_DIR}/RPackage/${BUILD_TYPE}/inst/libs/x64 PDB_OUTPUT_DIRECTORY_${UPPER_BUILD_TYPE} ${CMAKE_BINARY_DIR}/RPackage/${BUILD_TYPE}/inst/libs/x64)
		else()
			set_target_properties(binaryTablesRPackage PROPERTIES RUNTIME_OUTPUT_DIRECTORY_${UPPER_BUILD_TYPE} ${CMAKE_BINARY_DIR}/RPackage/${BUILD_TYPE}/inst/libs/i386 PDB_OUTPUT_DIRECTORY_${UPPER_BUILD_TYPE} ${CMAKE_BINARY_DIR}/RPackage/${BUILD_TYPE}/inst/libs/i386)
		endif()
	endforeach()
else()
	set_target_properties(binaryTablesRPackage PROPERTIES LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/RPackage/src)
	set_target_properties(binaryTablesRPackage PROPERTIES PREFIX "")
endif()
